# hasql-th

./: .travis.yml  LICENSE  README.md  build.bash  hasql-th.cabal  mhasql-th.cabal  package.yaml  stack-9.4.yaml  stack.yaml
.github/workflows/: check.yaml  ci.yaml  on-push-to-master-or-pr.yaml  on-push-to-release.yaml
ci/: download-stack.sh
references/: operator-token-scanner  postgres-gram-defs
src/MHasql/: TH.hs
src/MHasql/TH/: Prelude.hs
src/MHasql/TH/Construction/: Exp.hs
src/MHasql/TH/Extraction/: ChildExprList.hs  Exp.hs  InputTypeList.hs  OutputTypeList.hs  PlaceholderTypeMap.hs  PrimitiveType.hs
test/: Main.hs  stack-9.4-dependencies.txt
test/Main/: Gen.hs
test/doctest/: Main.hs
