name: hasql-th
version: 0.4
category: Hasql, Database, PostgreSQL, Template Haskell
synopsis: Template Haskell utilities for Hasql
description:
  Extension-library for Hasql,
  bringing compile-time syntax checking,
  great simplification of declaration of statements and
  other TemplateHaskell-based utilities.
  .
  For details please see <https://github.com/nikita-volkov/hasql-th the readme>.
homepage: https://github.com/nikita-volkov/hasql-th
bug-reports: https://github.com/nikita-volkov/hasql-th/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2015, Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/nikita-volkov/hasql-th.git

library
  hs-source-dirs: library
  default-extensions: ApplicativeDo, Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DuplicateRecordFields, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    Hasql.TH
  other-modules:
    Hasql.TH.Exp
    Hasql.TH.Extras.HeadedMegaparsec
    Hasql.TH.Extras.NonEmpty
    Hasql.TH.Prelude
    Hasql.TH.Syntax.Ast
    Hasql.TH.Syntax.HashSet
    Hasql.TH.Syntax.Extraction
    Hasql.TH.Syntax.Parsing
    Hasql.TH.Syntax.Predicate
    Hasql.TH.Syntax.Projections.ChildExprList
    Hasql.TH.Syntax.Projections.InputTypeList
    Hasql.TH.Syntax.Projections.OutputTypeList
    Hasql.TH.Syntax.Projections.PlaceholderTypeMap
    Hasql.TH.Syntax.Rendering
    Hasql.TH.Syntax.Validator
  build-depends:
    base >=4.11 && <5,
    bytestring >=0.10 && <0.11,
    case-insensitive >=1.2 && <2,
    containers >=0.6 && <0.7,
    contravariant >=1.5.2 && <2,
    fast-builder >=0.1.2 && <0.2,
    foldl >=1.4.5 && <2,
    hashable >=1.2 && <2,
    hasql >=1.4 && <1.5,
    headed-megaparsec >=0.1 && <0.2,
    megaparsec >=7 && <9,
    parser-combinators >=1.1 && <1.3,
    selective >=0.3 && <0.4,
    template-haskell >=2.8 && <3,
    text >=1 && <2,
    text-builder >=0.6.6.1 && <0.7,
    tuple-th >=0.2.5 && <0.3,
    unordered-containers >=0.2.10 && <0.3,
    uuid >=1.3 && <2,
    vector >=0.12 && <0.13

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test, library
  default-extensions: ApplicativeDo, Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, DuplicateRecordFields, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  main-is: Main.hs
  other-modules:
    Hasql.TH.Extras.HeadedMegaparsec
    Hasql.TH.Extras.NonEmpty
    Hasql.TH.Prelude
    Hasql.TH.Syntax.Ast
    Hasql.TH.Syntax.HashSet
    Hasql.TH.Syntax.Extraction
    Hasql.TH.Syntax.Parsing
    Hasql.TH.Syntax.Predicate
    Hasql.TH.Syntax.Projections.ChildExprList
    Hasql.TH.Syntax.Projections.InputTypeList
    Hasql.TH.Syntax.Projections.OutputTypeList
    Hasql.TH.Syntax.Projections.PlaceholderTypeMap
    Hasql.TH.Syntax.Rendering
    Hasql.TH.Syntax.Validator
    Main.Gen
  build-depends:
    base,
    bytestring,
    case-insensitive,
    containers,
    contravariant,
    fast-builder,
    foldl,
    hashable,
    hasql,
    headed-megaparsec,
    hedgehog >=1.0.1 && <2,
    megaparsec,
    parser-combinators,
    selective,
    template-haskell,
    text,
    text-builder,
    tuple-th,
    unordered-containers,
    uuid,
    vector
